tests/fail/fail_if_initializer_scope.kr
// ERROR: if initializer variable must not escape the if/else chain.
fn inisiu() {
  si nter res = 1; res == 1 {
    mostra(res);
  } sinon {
    mostra(res);
  }

  mostra(res);
}
